--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "jest",
     "testing": "jest --watch",
     "tslint": "tslint",
+    "relay": "relay-compiler --src ./src --schema data/schema.graphql",
     "sync-colors": "cd externals/elan && git fetch && git checkout origin/master && cp components/lib/variables/colors.json ../../data",
     "sync-externals": "npm run-script sync-schema && npm run-script sync-colors",
     "sync-schema": "cd externals/metaphysics && git fetch && git checkout origin/master && yarn install && npm run dump-schema -- ../../data && rm -rf node_modules",
@@ -87,7 +88,7 @@
     "react-native": "next",
     "react-native-parallax-scroll-view": "https://github.com/orta/react-native-parallax-scroll-view",
     "react-native-sentry": "^0.11.8",
-    "react-relay": "https://github.com/alloy/relay/releases/download/react-relay-0.9.3%2Breact-native-0.45-fix-2/react-relay-0.9.3.react-native-0.45-fix-2.tgz",
+    "react-relay": "^1.0.0",
     "remove-markdown": "0.1.0",
     "styled-components": "^2.0.0"
   },
@@ -101,9 +102,9 @@
     "apphub": "^0.5.1",
     "awesome-typescript-loader": "^3.1.3",
     "babel-jest": "^18.0.0",
+    "babel-plugin-relay": "^1.0.1",
     "babel-polyfill": "^6.13.0",
     "babel-preset-react-native": "^1.9.1",
-    "babel-relay-plugin": "https://github.com/alloy/relay/releases/download/v0.9.3/babel-relay-plugin-0.9.3.tgz",
     "concurrently": "^2.2.0",
     "danger": "^0.21.0",
     "danger-plugin-yarn": "^0.2.10",
@@ -115,15 +116,14 @@
     "react-storybooks-relay-container": "^1.0.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "recursive-readdir-sync": "^1.0.6",
+    "relay-compiler": "^1.0.0",
     "relay2ts": "^0.2.0",
     "ts-jest": "^20.0.3",
     "tslint": "^5.4.3",
     "tslint-config-prettier": "^1.0.0",
     "typescript": "^2.3.2"
   },
-  "peerDependencies": {
-    "babel-relay-plugin": "^0.9.0"
-  },
+  "peerDependencies": {},
   "lint-staged": {
     "*.@(ts|tsx)": [
       "tslint --fix",
