--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ci": "npm run type-check && npm run lint && npm run prettier-project -- -l && npm run test -- --runInBand",
     "danger": "danger",
     "start": "npm run clean-example && npm run start-servers",
-    "start-servers": "concurrently --kill-others 'npm run start-packager' 'npm run storybook'",
+    "start-servers": "concurrently --kill-others 'npm run start-packager' 'npm run relay -- --watch' 'npm run storybook'",
     "start-packager": "node node_modules/react-native/local-cli/cli.js start",
     "storybook": "storybook start -p 9001 -c .storybook --skip-packager",
     "rndebugger": "REACT_DEBUGGER=\"open 'rndebugger://set-debugger-loc?host=localhost&port=8081' --args\" npm start",
